--- a/README.org
+++ b/README.org
@@ -9,3 +9,5 @@ If you want to know/install my user dotfiles, follow this link: [[https://github
 
 So, there isn't any install script here, youneed to link manually all these files:
 1. [[./udev_rules/13-fix-keyboard.rules]] to =/etc/udev/rules.d/=
+2. [[./modprobe/ath9k_htc.conf]] to =/etc/modprobe/=
+3. [[./modprobe/bluetooth-audio.conf]] to =/etc/modprobe/=
