added blueooth configs

--- a/README.org
+++ b/README.org
@@ -11,3 +11,4 @@ So, there isn't any install script here, youneed to link manually all these file
 1. [[./udev_rules/13-fix-keyboard.rules]] to =/etc/udev/rules.d/=
 2. [[./modprobe/ath9k_htc.conf]] to =/etc/modprobe/=
 3. [[./modprobe/bluetooth-audio.conf]] to =/etc/modprobe/=
+4. [[./bluetooth/main.conf]] to =/etc/bluetooth/=
